
Tue Aug 25, 2009 07:08 AM
- added: db table field users.membershipType varchar(50).
- added: db table fees: feeId, timestamp, userId, forTheYear, currency, amount.
- added: ApplicationAction controller with power acl functionality.
- added: db tables: groups, users_groups, menu_groups, modules and menus and
  permissions.
- added: admin_users module to administrate users.
- fixed: sidebar to include automatic menu generation for menu items.

Sun Aug 23, 2009 08:57 PM - committed
- fix: #1 full text search for error404. displays error404 with similar pages
  for unauthorised users, while non-existent page is displayed for
  administrators who can create pages.
- added: default Pages model, PagesMapper and abstract Pub_Model_Mapper.
- removed: NonEmpty validator for field userId in Register form. as this causes
  the ViewRenderer to display the same error message for the field multiple
  times when the validation fails.

Sun 23 Aug 2009 05:20:57 AM MVT - committed
- fix: title issue when creating a new wiki page.
- fix: wiki links changed from wiki page title to name field.
- fix: show message when there is no history instead of error.
- fix: PageRevisions model references in the wiki controller.