@@ -10,10 +10,10 @@ bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 
 resources.frontController.moduleDirectory = APPLICATION_PATH "modules"
-resources.frontController.baseUrl = "/"
+resources.frontController.baseUrl = 
 resources.frontController.throwExceptions = false
 resources.frontController.useDefaultControllerAlways = true
-resources.modules[] =
+resources.modules[] = 
 resources.layout.layoutPath = APPLICATION_PATH "layouts/scripts"
 resources.view[] =
 resources.db.adapter         = mysqli
