@@ -14,6 +14,7 @@
     <a href="<?php echo $this->baseUrl ?>/admin/users/view/userId/<?php echo $this->user->getUserId() ?>">View</a> .
     <a href="<?php echo $this->baseUrl ?>/admin/users/edit/userId/<?php echo $this->user->getUserId() ?>">Edit</a> .
     <a href="#" id="lnkDelete">Delete</a> .
-    <a href="#">Fee Payment</a> .
+    <a href="<?php echo $this->baseUrl ?>/admin/users/subscription/userId/<?php echo $this->user->getUserId() ?>">Subscription</a> .
+    <a href="#">Reset Password</a> .
     <a href="#">Disable</a>
 </div>
