@@ -38,7 +38,7 @@ $this->headTitle($this->profile['name']);
         </tr>
         <tr>
             <th>Location:</th>
-            <td><?php echo $this->profile['location'] ?></td>
+            <td><?php echo stripslashes($this->profile['location']) ?></td>
         </tr>
         <tr>
             <th>Member Since:</th>
